<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name1">Soho</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="register_agreement_message">By signing up, you agree to Soho’s</string>
    <string name="register_terms_of_condition">Terms of Condition</string>
    <string name="register_button">SIGN UP</string>
    <string name="register_loading">Please wait while we register you</string>
    <string name="login_loading">Please wait while we log you in</string>
    <string name="registering">Registering</string>
    <string name="please_wait">Please wait..</string>
    <string name="signup_we_send_email">We\'ll send an email to reset your password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="marketplace_buy_tab">Buy</string>
    <string name="marketplace_rent_tab">Rent</string>
    <string name="market_place_search_box_all_suburbs">All suburbs</string>
    <string name="market_order_newest_to_oldest">Newest to oldest</string>
    <string name="market_order_oldest_to_newest">Oldest to newest</string>
    <string name="market_order_low_to_high">Low to high</string>
    <string name="market_order_high_to_low">High to low</string>
    <string name="market_order_order_by_title">order by</string>
    <string name="market_order_by_text_view_text">order by |\ </string>
    <string name="common_loading">Loading..</string>
    <string name="common_loading_error">Something went wrong..</string>
    <string name="error_occurred">Error occurred. Please try again later</string>
    <string name="something_wrong_error">Something went wrong. Please try again</string>
    <string name="coming_soon">Coming soon..</string>
    <string name="dollar_format">$%1$s</string>
    <string name="common_settings">Settings</string>
    <string name="common_pin_sent">pin sent</string>
    <string name="dialog_want_save">Do you want to save your changes?</string>
    <string name="discard">Discard</string>
    <string name="unknown">Unknown</string>
    <string name="test_text_tiny">lorem</string>
    <string name="test_text_short">Lorem ipsum</string>
    <string name="test_text_medium">Lorem ipsum dolor sit amet</string>
    <string name="test_text_long">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="home_add_property">+</string>
    <string name="home_tab_more">More</string>
    <string name="home_tab_messages">Messages</string>
    <string name="home_tab_manage">Manage</string>
    <string name="home_tab_marketplace">Marketplace</string>
    <string name="add_property_toolbar_title">Add Property</string>
    <string name="add_property_autocomplete_hint">Enter your address</string>
    <string name="add_property_continue">Continue</string>
    <string name="add_property_enter_the_address">Enter the address</string>
    <string name="add_property_empty_address_error">Please enter the address</string>
    <string name="add_property_relation_question">How are you related to the property?</string>
    <string name="add_property_relation_owner">Owner</string>
    <string name="add_property_relation_agent">Agent</string>
    <string name="add_property_relation_other">Other</string>
    <string name="add_property_what_type_of_property">Oh, that\'s a nice suburb!\nWhat type of property is it?</string>
    <string name="add_property_owner_home_question">Do you live in this property?</string>
    <string name="add_property_owner_home_button">Yes - It\'s my home</string>
    <string name="add_property_owner_investment_button">No - It\'s an investment</string>
    <string name="add_property_agent_home_question">Is this a home or investment property?</string>
    <string name="add_property_agent_home_button">It\'s the owner\'s home</string>
    <string name="add_property_agent_investment_button">It\'s an investment property</string>
    <string name="add_property_how_many_rooms">How many Bedrooms, Bathrooms and Carspots?</string>
    <string name="add_property">Add Property</string>
    <string name="rooms_picker_decrease">-</string>
    <string name="rooms_picker_increase">+</string>
    <string name="rooms_picker_studio">Studio</string>
    <string name="rooms_picker_any_bedroom">Any Bedrooms</string>
    <string name="rooms_picker_any_bathroom">Any Bathrooms</string>
    <string name="rooms_picker_any_carspot">Any Carspots</string>
    <string name="your_email">Your Email</string>
    <string name="reset_password">reset password</string>
    <string name="login_button">Login</string>
    <plurals name="rooms_picker_bedrooms">
        <item quantity="one">%d Bedroom</item>
        <item quantity="other">%d Bedrooms</item>
    </plurals>
    <plurals name="rooms_picker_bathrooms">
        <item quantity="one">%d Bathroom</item>
        <item quantity="other">%d Bathrooms</item>
    </plurals>
    <plurals name="rooms_picker_carspots">
        <item quantity="one">%d Carspot</item>
        <item quantity="other">%d Carspots</item>
    </plurals>
    <plurals name="rooms_picker_bedrooms_with_plus">
        <item quantity="one">%d+ Bedroom</item>
        <item quantity="other">%d+ Bedrooms</item>
    </plurals>
    <plurals name="rooms_picker_bathrooms_with_plus">
        <item quantity="one">%d+ Bathroom</item>
        <item quantity="other">%d+ Bathrooms</item>
    </plurals>
    <plurals name="rooms_picker_carspots_with_plus">
        <item quantity="one">%d+ Carspot</item>
        <item quantity="other">%d+ Carspots</item>
    </plurals>
    <plurals name="number_picker_kilometers">
        <item quantity="one">%d Km</item>
        <item quantity="other">%d Kms</item>
    </plurals>
    <string name="portfolio_owner">Owner</string>
    <string name="portfolio_agent">Agent</string>
    <string name="portfolio_requests">Requests</string>
    <string name="portfolio_add_property">+ Add a property</string>
    <plurals name="portfolio_properties_quantity">
        <item quantity="one">%d Property</item>
        <item quantity="other">%d Properties</item>
    </plurals>
    <string name="portfolio_estimated_value" formatted="true">$%.2f</string>
    <string name="portfolio_estimated_value_k" formatted="true">$%.2fk</string>
    <string name="portfolio_estimated_value_m" formatted="true">$%.2fm</string>
    <string name="portfolio_public_count" formatted="true" tools:ignore="PluralsCandidate">%d public</string>
    <string name="portfolio_yield_null" tools:ignore="TypographyDashes">Yield: --</string>
    <string name="portfolio_yield" formatted="true">Yield: %.2f%%</string>
    <string name="portfolio_lvr_null" tools:ignore="TypographyDashes">LVR: --</string>
    <string name="portfolio_lvr" formatted="true">LVR: %.2f%%</string>
    <string name="portfolio_changed_value_null">--</string>
    <string name="portfolio_changed_value_minus" formatted="true">-%s</string>
    <string name="portfolio_changed_value_plus" formatted="true">+%s</string>
    <string name="portfolio_portfolios_list_item">PORTFOLIOS</string>
    <string name="portfolio_client_portfolios_list_item">CLIENT PORTFOLIOS</string>
    <string name="portfolio_plus_property">+ Add property</string>
    <string name="edit_property_overview">Overview</string>
    <string name="edit_property_connection">Connection</string>
    <string name="edit_property_files">Files</string>
    <string name="edit_property_add_photo">Add photo</string>
    <string name="edit_property_save">Save</string>
    <string name="edit_property_take_a_photo">Take a photo</string>
    <string name="edit_property_upload_a_photo">Choose from Gallery</string>
    <string name="edit_property_image_chooser_title">Select Picture</string>
    <string name="edit_property_logo">LOGO</string>
    <string name="edit_property_sale_and_rent_settings">Sale &amp; Rent Settings:</string>
    <string name="edit_property_public">Public</string>
    <string name="edit_property_private">Private</string>
    <string name="edit_property_archived">Archived</string>
    <string name="edit_property_verification">Verification</string>
    <string name="edit_property_finance_tracker_private">Finance Tracker (Private)</string>
    <string name="edit_property_yield">Yield</string>
    <string name="edit_property_lvr">LVR</string>
    <string name="edit_property_value_change">Value Change</string>
    <string name="edit_property_no_value">--</string>
    <string name="edit_property_enter_value">Enter Value</string>
    <string name="edit_property_purchase_price">Purchase Price</string>
    <string name="new_connection_toolbar">Add A Connection</string>
    <string name="new_connection_role">Connection Role</string>
    <string name="new_connection_role_desc">Role of Connection</string>
    <string name="new_connection_details">Connection Details</string>
    <string name="new_connection_first_name">First Name..</string>
    <string name="new_connection_email">Email..</string>
    <string name="new_connection_send_invite">Send Invite</string>
    <string name="publish_property_save">Save</string>
    <string name="publish_property_details">Details</string>
    <string name="publish_property_description_hint">Add a description of your property</string>
    <string name="publish_property_size">Size of property</string>
    <string name="publish_property_size_desc">Add size of property</string>
    <string name="publish_property_inspection_time">Inspection time</string>
    <string name="publish_property_inspection_time_decs">Set Inspection Time</string>
    <string name="publish_property_rent_settings">Rent Settings</string>
    <string name="publish_property_rent_property_settings">Rent Property Settings</string>
    <string name="publish_property_rental_price">Rental Price</string>
    <string name="publish_property_rental_price_desc">Expected rent for selected period</string>
    <string name="publish_property_rent_title">Rent title</string>
    <string name="publish_property_rent_title_hint">e.g. $1000 per week</string>
    <string name="publish_property_rent_availability">Availability</string>
    <string name="publish_property_rent_available_from">Available From</string>
    <string name="publish_property_status_updated">Status Updated</string>
    <string name="publish_property_next">Next</string>
    <string name="publish_property_next_verification">Next: Verification</string>
    <string name="publish_property_property_status_updated">Property Status Updated</string>
    <string name="publish_property_status_updated_desc">You\'ve successfully updated your property status</string>
    <string name="property_size_toolbar">Size of Property</string>
    <string name="property_size_measurement">Select Measurement</string>
    <string name="property_size_total_area">Enter Total Area</string>
    <string name="property_size_area_hint">e.g 200</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="country">Country</string>
    <string name="i_am_interested_in">I AM INTERESTED IN:</string>
    <string name="buying">Buying</string>
    <string name="selling">Selling</string>
    <string name="renting">Renting</string>
    <string name="i_am_an_agent">I am an agent</string>
    <string name="done">DONE</string>
    <string name="submit_button_text">Submit</string>
    <string name="enquiry_indication_of_price_text">Get an indication of price</string>
    <string name="enquiry_contract_of_sale_text">Obtain the contract of sale</string>
    <string name="enquiry_inspect_property_text">Inspect property</string>
    <string name="enquiry_contacted_about_similar_property_text">Be contacted about similar property</string>
    <string name="other_text">Other</string>
    <string name="enquire_header_text">I WOULD LIKE TO</string>
    <string name="comments_text">Comments</string>
</resources>