<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/toolbar_simple" />

        <TextView
            style="@style/FilterPropertyHeader"
            android:text="@string/enquire_header_text" />

        <CheckBox
            android:id="@+id/price_check_box"
            style="@style/EnquiryCheckbox"
            android:text="@string/enquiry_indication_of_price_text" />

        <CheckBox
            android:id="@+id/contract_check_box"
            style="@style/EnquiryCheckbox"
            android:text="@string/enquiry_contract_of_sale_text" />

        <CheckBox
            android:id="@+id/inspect_check_box"
            style="@style/EnquiryCheckbox"
            android:text="@string/enquiry_inspect_property_text" />

        <CheckBox
            android:id="@+id/contact_for_similar_check_box"
            style="@style/EnquiryCheckbox"
            android:text="@string/enquiry_contacted_about_similar_property_text" />

        <CheckBox
            android:id="@+id/other_check_box"
            style="@style/EnquiryCheckbox"
            android:text="@string/other_text" />

        <TextView
            style="@style/FilterPropertyHeader"
            android:textAllCaps="true"
            android:text="@string/comments_text" />

        <EditText
            android:id="@+id/comments_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoCorrect"
            android:maxLines="5" />

    </LinearLayout>

    <Button
        android:id="@+id/submit_enquire_button"
        style="@style/MaterialButton.Green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:text="@string/submit_button_text" />

</RelativeLayout>