<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/lightBackground"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:title="@string/new_connection_toolbar"
        app:titleTextColor="@color/white"/>

    <TextView
        style="@style/ListTextHeader"
        android:text="@string/new_connection_role"/>

    <LinearLayout
        android:id="@+id/roleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_selector"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_connection_role_desc"
            android:textColor="@color/primaryText"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/greenText"
            android:textSize="14sp"
            tools:text="@string/test_text_short"/>
    </LinearLayout>

    <TextView
        style="@style/ListTextHeader"
        android:text="@string/new_connection_details"/>

    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/new_connection_first_name"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textSize="14sp"/>

    <include layout="@layout/horizontal_rule"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/new_connection_email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/send_invite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/new_connection_send_invite"
        android:textAllCaps="true"
        android:theme="@style/MaterialButton.Green"/>
</LinearLayout>