<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--NOTE: Use of 'numberShortcut'! This is used for indexing-->
    <item
        android:id="@+id/tab_marketplace"
        android:icon="@drawable/tab_browse"
        android:numericShortcut="0"
        android:title="@string/home_tab_marketplace"/>

    <item
        android:id="@+id/tab_manage"
        android:icon="@drawable/tab_portfolio"
        android:numericShortcut="1"
        android:title="@string/home_tab_manage"/>

    <!--Empty tab to ignore as add property button will be overlayed here-->
    <item
        android:numericShortcut="-1"
        android:title=""/>

    <item
        android:id="@+id/tab_offers"
        android:icon="@drawable/tab_offers"
        android:numericShortcut="2"
        android:title="@string/home_tab_messages"/>

    <item
        android:id="@+id/tab_more"
        android:icon="@drawable/tab_menu"
        android:numericShortcut="3"
        android:title="@string/home_tab_more"/>

</menu>
