<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/lightBackground"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:title="@string/publish_property_rent_settings"
        app:titleTextColor="@color/white"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/ListTextHeader"
                android:text="@string/publish_property_rent_property_settings"/>

            <include
                android:id="@+id/rentPeriodOptions"
                layout="@layout/item_sale_settings_radio_group"/>

            <include layout="@layout/horizontal_rule"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp">

                <ImageView
                    android:id="@+id/priceIndicator"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/ic_orange_exclaimation"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/publish_property_rental_price"
                        android:textColor="@color/primaryText"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="@string/publish_property_rental_price_desc"
                        android:textColor="@color/hintText"/>
                </LinearLayout>

                <EditText
                    android:id="@+id/priceValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="end"
                    android:hint="@string/edit_property_enter_value"
                    android:inputType="number"
                    android:maxLength="20"
                    android:textColor="@color/primaryText"
                    android:textColorHint="@color/blueText"
                    android:textSize="14sp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/saleTitleHeader"
                style="@style/ListTextHeader"
                android:text="@string/publish_property_rent_title"/>

            <EditText
                android:id="@+id/rentTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/publish_property_rent_title_hint"
                android:padding="16dp"
                android:textSize="14sp"/>

            <TextView
                style="@style/ListTextHeader"
                android:text="@string/publish_property_details"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/list_selector"
                android:ellipsize="end"
                android:maxLines="3"
                android:padding="16dp"
                android:text="@string/publish_property_description_hint"
                android:textColor="@color/primaryText"
                android:textSize="14sp"
                tools:text="@string/test_text_long"/>

            <TextView
                style="@style/ListTextHeader"
                android:text="@string/publish_property_rent_availability"/>

            <LinearLayout
                android:id="@+id/availability"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/list_selector"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/publish_property_rent_available_from"
                    android:textColor="@color/primaryText"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/availableFrom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryText"
                    android:textSize="14sp"
                    tools:text="@string/test_text_short"/>
            </LinearLayout>

            <TextView
                style="@style/ListTextHeader"
                android:text="@string/publish_property_size"/>

            <LinearLayout
                android:id="@+id/propertySizeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/list_selector"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/publish_property_size_desc"
                    android:textColor="@color/primaryText"
                    android:textSize="14sp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/ic_arrow_right"/>
            </LinearLayout>

            <TextView
                style="@style/ListTextHeader"
                android:text="@string/publish_property_inspection_time"/>

            <include
                android:id="@+id/inspectionTimeOptions"
                layout="@layout/item_sale_settings_radio_group"/>

            <include layout="@layout/horizontal_rule"/>

            <TextView
                android:id="@+id/inspectionTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/list_selector"
                android:padding="16dp"
                android:text="@string/publish_property_inspection_time_decs"
                android:textColor="@color/primaryText"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/save"
                android:theme="@style/MaterialButton.Green"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/publish_property_save"
                android:textAllCaps="true"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>