<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.soho.sohoapp.feature.landing.signup.SignUpActivity"
    android:background="@drawable/register_email_account"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/soho_logo_white"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="35dp"
            />

        <EditText
            android:id="@+id/first_name_edit_text"
            android:hint="@string/first_name"
            android:layout_marginBottom="20dp"
            android:inputType="textEmailAddress"
            style="@style/EditText.RegisterStyle"
            android:theme="@style/EditText.RegisterTheme"
            />

        <EditText
            android:id="@+id/last_name_edit_text"
            android:hint="@string/last_name"
            android:layout_marginBottom="20dp"
            style="@style/EditText.RegisterStyle"
            android:theme="@style/EditText.RegisterTheme"
            />
        <EditText
            android:id="@+id/country_edit_text"
            android:hint="@string/country"
            android:layout_marginBottom="30dp"
            style="@style/EditText.RegisterStyle"
            android:theme="@style/EditText.RegisterTheme"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            style="@style/TextView.Message.Large.Start.LightWhite"
            android:text="@string/i_am_interested_in"
            />


        <CheckBox
            android:id="@+id/buying_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buying"
            android:layout_marginTop="20dp"
            style="@style/Checkbox.Style"
            android:theme="@style/Checkbox.Theme"
            />

        <CheckBox
            android:id="@+id/selling_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selling"
            android:layout_marginTop="5dp"
            style="@style/Checkbox.Style"
            android:theme="@style/Checkbox.Theme"
            />

        <CheckBox
            android:id="@+id/renting_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/renting"
            android:layout_marginTop="5dp"
            style="@style/Checkbox.Style"
            android:theme="@style/Checkbox.Theme"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:paddingTop="15dp"
                style="@style/TextView.Message.Large.Start.LightWhite"
                android:text="@string/i_am_an_agent"/>

            <ToggleButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

        <TextView
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            style="@style/Button.Green"
            android:text="@string/done"
            />
    </LinearLayout>

</FrameLayout>
